data/derived/comb/progs/unify/prog1607.ml.out
Characters 139-158:
  (helper xs1 xs2 [])
  ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
